--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<title>Vadim Martynenko</title>
 	<link rel="stylesheet" href="main.css">
-	**<link rel="icon" type="image/png" href="/path/to/favicon.png">** <!-- Фавикон -->
+	**<link rel="icon" type="image/png" href="favicon.png">** <!-- Фавикон -->
 	<style>
 		.container {
 			margin: 20px;
