--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<h3>Мой стек</h3>
 	<p>
 		<strong>Фронт:</strong> DevTools, Charles.<br>
-		<strong>Бэк:</strong> Postman, Swagger, SOAP UI.<br>
+		<strong>API:</strong> Postman, Swagger, SOAP UI.<br>
 		<strong>Чек-листы:</strong> Miro.<br>
 		<strong>Логи:</strong> Jaeger, Grafana, Kibana, Sentry, Loguru.<br>
 		<strong>Тест-кейсы:</strong> Test IT.<br>
