--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 <body class="container">
 	<h1>Вадим Мартыненко</h1>
+	<p>QA Engineer</p>
 
 	<div class="item">
 		<img class="photo" src="me.jpg" width="170" height="170" alt="фото">
