в QA Engineer жирность добавил

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="container">
 	<h1>Вадим Мартыненко</h1>
-	<p>QA Engineer</p>
+	<p style="font-weight: bold;">QA Engineer</p>
 
 	<div class="item">
 		<img class="photo" src="me.jpg" width="170" height="170" alt="фото">
