--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		.photo {
 			border-radius: 50%;
 		}
-		h2, h3 {
+		h1, h2, h3 {
 			margin-top: 30px;
 		}
 		p {
@@ -26,12 +26,16 @@
 		.button {
 			margin-top: 20px;
 		}
+		.bold-text {
+			font-size: 18px; /* Добавляем стиль для текста QA Engineer */
+			font-weight: bold;
+		}
 	</style>
 </head>
 
 <body class="container">
 	<h1>Вадим Мартыненко</h1>
-	<p style="font-weight: bold;">QA Engineer</p>
+	<p class="bold-text">QA Engineer</p> <!-- Применение нового стиля -->
 
 	<div class="item">
 		<img class="photo" src="me.jpg" width="170" height="170" alt="фото">
