изменил размер QA Engineer

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<strong>Git:</strong> GitHub.<br>
 		<strong>Английский:</strong> B1.<br>
 		<strong>Хобби:</strong> Стараюсь по возможности путешествовать и открывать для себя новые места,<br>
-		люблю готовить, увлекаюсь баскетболом и играю на гитаре для души😊.<br>
+		люблю готовить, увлекаюсь баскетболом и играю на гитаре для души😊<br>
 		<strong>База:</strong> Глаза, внимательность, любопытство.
 	</p>
 
