--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body class="container">
     <h1>Вадим Мартыненко</h1>
-    <p class="bold-text">QA Engineer</p> <!-- Изменение: Удален инлайн-стиль -->
+    <p class="bold-text">QA Engineer</p>
 
     <div class="item">
         <img class="photo" src="me.jpg" width="170" height="170" alt="фото">
