--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body class="container">
     <h1>Вадим Мартыненко</h1>
-    <p class="bold-text">QA Engineer</p>
+    <p class="bold-text">QA Manual Engineer</p>
 
     <div class="item">
         <img class="photo" src="me.jpg" width="170" height="170" alt="фото">
@@ -55,9 +55,9 @@
 
     <br> <!-- Отступ между разделами -->
     <div class="contacts">
-        <a href="http://t.me/martynenko_vadim">telegram</a> 
+        <a href="http://t.me/martynenko_vadim">Telegram</a> 
         <br>
-        <a href="mailto:vadim.mar.1@yandex.ru">email</a>
+        <a href="mailto:vadim.mar.1@yandex.ru">Email</a>
         <br>
     </div>
     
