--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             margin-top: 20px;
         }
         .bold-text {
-            font-size: 1.5em; /* Изменение: Установлен размер шрифта, чтобы соответствовать размеру h2 */
+            font-size: 1.5em; 
             font-weight: bold;
         }
     </style>
@@ -53,7 +53,34 @@
         и быть частью чего-то значимого.
     </p>
 
-    <br> <!-- Отступ между разделами -->
+    <br> 
+
+    <h2>Мой стек</h2>
+    <p>
+        Фронт: Figma, DevTools, Charles.<br>
+        API: Postman, Swagger, SOAP UI.<br>
+        Чек-листы: Miro.<br>
+        Логи: Grafana, Kibana, Sentry, Loguru.<br>
+        Трейсинг: Jaeger.<br>
+        Тест-кейсы: Qase.io, Test IT.<br>
+        Таск-трекер: Jira, Яндекс-Трекер.<br>
+        БД: PostgreSQL (DBeaver), MongoDB (Compass), Redis (Redis Commander).<br>
+        Работа с очередью: Kafka.<br>
+        Git: GitLab.<br>
+        Английский: B1.<br>
+        База: Глаза, внимательность, любопытство.
+    </p>
+
+    <br> 
+
+    <h2>Хобби</h2>
+    <p>
+        Стараюсь по возможности путешествовать и открывать для себя новые места,<br>
+        люблю готовить, увлекаюсь баскетболом и играю на гитаре для души.
+    </p>
+
+    <br> 
+
     <div class="contacts">
         <a href="http://t.me/martynenko_vadim">Telegram</a> 
         <br>
