--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     </div>
 
     <h2>Обо мне</h2>
-    <p>
-        Я внимателен к деталям,<br>
+    <p> Я внимателен к деталям,<br>
         легко нахожу общий язык с людьми<br>
         и получаю удовольствие от процесса тестирования,<br>
         особенно когда нахожу баги.<br>
@@ -56,8 +55,7 @@
     <br> 
 
     <h2>Мой стек</h2>
-    <p>
-        Фронт: Figma, DevTools, Charles.<br>
+    <p> Фронт: Figma, DevTools, Charles.<br>
         API: Postman, Swagger, SOAP UI.<br>
         Чек-листы: Miro.<br>
         Логи: Grafana, Kibana, Sentry, Loguru.<br>
@@ -74,8 +72,7 @@
     <br> 
 
     <h2>Хобби</h2>
-    <p>
-        Стараюсь по возможности путешествовать и открывать для себя новые места,<br>
+    <p> Стараюсь по возможности путешествовать и открывать для себя новые места,<br>
         люблю готовить, увлекаюсь баскетболом и играю на гитаре для души.
     </p>
 
