--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             font-size: 1.5em; 
             font-weight: bold;
         }
+        .no-margin {
+            margin: 0;
+        }
     </style>
 </head>
 
@@ -42,7 +45,7 @@
     </div>
 
     <h2>Обо мне</h2>
-    <p> Я внимателен к деталям,<br>
+    <p class="no-margin">Я внимателен к деталям,<br>
         легко нахожу общий язык с людьми<br>
         и получаю удовольствие от процесса тестирования,<br>
         особенно когда нахожу баги.<br>
@@ -52,10 +55,8 @@
         и быть частью чего-то значимого.
     </p>
 
-    <br> 
-
     <h2>Мой стек</h2>
-    <p> Фронт: Figma, DevTools, Charles.<br>
+    <p class="no-margin">Фронт: Figma, DevTools, Charles.<br>
         API: Postman, Swagger, SOAP UI.<br>
         Чек-листы: Miro.<br>
         Логи: Grafana, Kibana, Sentry, Loguru.<br>
@@ -69,14 +70,10 @@
         База: Глаза, внимательность, любопытство.
     </p>
 
-    <br> 
-
     <h2>Хобби</h2>
-    <p> Стараюсь по возможности путешествовать и открывать для себя новые места,<br>
+    <p class="no-margin">Стараюсь по возможности путешествовать и открывать для себя новые места,<br>
         люблю готовить, увлекаюсь баскетболом и играю на гитаре для души.
     </p>
-
-    <br> 
 
     <div class="contacts">
         <a href="http://t.me/martynenko_vadim">Telegram</a> 
