--- a/index.html
+++ b/index.html
@@ -56,15 +56,14 @@
     </p>
 
     <h2>Мой стек</h2>
-    <p class="no-margin">Фронт: Figma, DevTools, Charles.<br>
+    <p class="no-margin">Фронт: Figma, DevTools, Charles, Pixel Perfect.<br>
         API: Postman, Swagger, SOAP UI.<br>
         Чек-листы: Miro.<br>
         Логи: Grafana, Kibana, Sentry, Loguru.<br>
         Трейсинг: Jaeger.<br>
         Тест-кейсы: Qase.io, Test IT.<br>
         Таск-трекер: Jira, Яндекс-Трекер.<br>
-        БД: PostgreSQL (DBeaver), MongoDB (Compass), Redis (Redis Commander).<br>
-        Работа с очередью: Kafka.<br>
+        БД: PostgreSQL (DBeaver), MongoDB (Compass).<br>
         Git: GitLab.<br>
         Английский: B1.<br>
         База: Глаза, внимательность, любопытство.
